# framelift

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/: pull_request_template.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml
assets/img/: icon.af
cmake/: FrameLiftBuiltinModules.cmake  FrameLiftDeps.cmake  FrameLiftHostSources.cmake  FrameLiftOptimize.cmake  FrameLiftPackageMetadata.cmake  FrameLiftPlatformLibs.cmake  FrameLiftPluginMetadata.cmake  FrameLiftSdk.cmake  FrameLiftSdkConfig.cmake.in  FrameLiftShaders.cmake
packaging/linux/: framelift.desktop
packaging/windows/: framelift.rc.in
plugins/Benchmark/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  SysStats.cpp
plugins/DebugOverlay/: CMakeLists.txt  DebugOverlay.cpp  DebugOverlay.h
plugins/History/: CMakeLists.txt  History.cpp  History.h
plugins/Overlay/: CMakeLists.txt  Overlay.cpp  Overlay.h
plugins/Playlist/: CMakeLists.txt  Playlist.cpp  Playlist.h
plugins/RemoteStream/: RemoteStream.cpp  RemoteStream.h
plugins/SettingsMenu/: CMakeLists.txt  SettingsMenu.cpp  SettingsMenu.h
plugins/Updater/: CMakeLists.txt  SemVer.h  Updater.cpp  Updater.h
plugins/benchmark/: Benchmark.Plugin.json  Benchmark.cpp  Benchmark.h  Benchmark.qml  BenchmarkSettings.cpp  BenchmarkSettings.h  BenchmarkSettings.qml  CMakeLists.txt  SysStats.cpp  SysStats.h
plugins/benchmark/core/: Benchmark.cpp  Benchmark.h  Benchmark.qml  Core.Module.json  SysStats.cpp  SysStats.h
plugins/console/: CMakeLists.txt  Console.Plugin.json  Console.cpp  Console.h  Console.qml  ConsoleSettings.cpp  ConsoleSettings.h  ConsoleSettings.qml
plugins/context-menu/: CMakeLists.txt  ContextMenu.Plugin.json  ContextMenu.qml  ContextMenuModule.cpp  ContextMenuModule.h
plugins/debug-overlay/: CMakeLists.txt  DebugOverlay.Plugin.json  DebugOverlay.cpp  DebugOverlay.h  DebugOverlay.qml
plugins/history/: CMakeLists.txt  History.Plugin.json  History.cpp  History.h  History.qml  HistorySettings.cpp  HistorySettings.h  HistorySettings.qml
plugins/log-viewer/: CMakeLists.txt  LogViewer.Plugin.json  LogViewer.cpp  LogViewer.h  LogViewer.qml  LogViewerSettings.cpp  LogViewerSettings.h  LogViewerSettings.qml
plugins/overlay/: CMakeLists.txt  Overlay.Plugin.json  Overlay.cpp  Overlay.h  Overlay.qml
plugins/playlist/: CMakeLists.txt  Playlist.Plugin.json  Playlist.cpp  Playlist.h  Playlist.qml  PlaylistSettings.cpp  PlaylistSettings.h  PlaylistSettings.qml
plugins/playlist/core/: Core.Module.json  ExtensionFilter.h  Playlist.cpp  Playlist.h
plugins/remote-stream/: CMakeLists.txt  RemoteStream.Plugin.json  RemoteStream.cpp  RemoteStream.h  RemoteStream.qml
plugins/updater/: CMakeLists.txt  Updater.Plugin.json  Updater.cpp  Updater.h  Updater.qml
plugins/updater/core/: Core.Module.json  Updater.cpp  Updater.h
sdk/: README.md
sdk/examples/HelloPlugin/: CMakeLists.txt  HelloPlugin.cpp  HelloPlugin.h
sdk/examples/hello-plugin/: CMakeLists.txt  HelloPlugin.Plugin.json
sdk/examples/hello-plugin/core/: Core.Module.json  HelloPlugin.cpp  HelloPlugin.h
sdk/package-template/: CMakeLists.txt
src/: App.cpp  App.h  Cli.h  FileDialogServiceImpl.cpp  FocusManagerImpl.h  FrameLift.rc.in  HotkeysImpl.h  PluginContext.cpp  PluginContext.h  PluginLoader.cpp  PluginLoader.h  PluginRegistry.h  PluginResolver.cpp  Settings.cpp  Settings.h  SettingsMapping.h  ThemeUtil.h  Version.h.in  main.cpp  util.h
tests/: BenchmarkTests.cpp  CMakeLists.txt  DebugOverlayTests.cpp  FFmpegClockTests.cpp  FFmpegFiltersTests.cpp  FFmpegHwDecodeTests.cpp  FFmpegLetterboxTests.cpp  FFmpegSubtitleBlendTests.cpp  FFmpegTrackLabelTests.cpp  FocusManagerTests.cpp  GraphicsApiTests.cpp  HistoryTests.cpp  MediaEventTests.cpp  ModuleEntryNoRenderTests.cpp  ModuleEntryTests.cpp  OverlayTests.cpp  PlaylistTests.cpp  PluginAbiTests.cpp  PluginContextTests.cpp  PluginExportNoRenderTests.cpp  PluginExportTests.cpp  PluginResolverTests.cpp  PluginSettingsTests.cpp  SettingsMappingTests.cpp  SettingsMenuTests.cpp  SettingsTests.cpp  VulkanModuleDisabledTests.cpp  VulkanQueueLockTests.cpp
tests/fakes/: FakeMediaPlayer.h
tests/module-entry/: ModuleEntryMultiTests.cpp  ModuleEntryNoRenderTests.cpp  ModuleEntryTests.cpp
tests/plugins/benchmark/: BenchmarkTests.cpp
tests/plugins/console/: ConsoleTests.cpp
tests/plugins/context-menu/: ContextMenuTests.cpp
tests/plugins/debug-overlay/: DebugOverlayTests.cpp
tests/plugins/history/: HistoryTests.cpp
tests/plugins/log-viewer/: LogViewerTests.cpp
tests/plugins/overlay/: OverlayTests.cpp
tests/plugins/playlist/: PlaylistTests.cpp
tests/plugins/remote-stream/: RemoteStreamTests.cpp
tests/plugins/settings-menu/: SettingsMenuTests.cpp
tests/stubs/: TestNoRenderPluginMetadata.h  TestPluginMetadata.h  TestRenderingPluginMetadata.h  Version.h
tests/support/: DiscoverQtTests.cmake  QtTestRunner.cpp  QtTestRunner.h  TempIni.h
tests/support/fakes/: FakeMediaPlayer.h
tests/support/stubs/: IconData.h  TestMultiModulePackageMetadata.h  TestNoRenderPackageMetadata.h  TestNoRenderPluginMetadata.h  TestPackageMetadata.h  TestPluginMetadata.h  TestRenderingPackageMetadata.h  TestRenderingPluginMetadata.h
tests/unit/gfx/: GraphicsApiTests.cpp  VulkanModuleDisabledTests.cpp  VulkanQueueLockTests.cpp
tests/unit/host/: CommandRegistryTests.cpp  FontScanTests.cpp  HotkeysTests.cpp  ModuleContextTests.cpp  ModuleSettingsTests.cpp  PackageAbiTests.cpp  PackageConfigTests.cpp  PackageResolverTests.cpp  PluginAbiTests.cpp  PluginConfigTests.cpp  PluginContextTests.cpp  PluginResolverTests.cpp  PluginSettingsTests.cpp  ReadAheadCacheTests.cpp  SemVerTests.cpp  SettingsMappingTests.cpp  SettingsTests.cpp  WinShellTests.cpp
tests/unit/media/: FFmpegClockTests.cpp  FFmpegErrorTests.cpp  FFmpegFiltersTests.cpp  FFmpegHwDecodeTests.cpp  FFmpegLetterboxTests.cpp  FFmpegSubtitleBlendTests.cpp  FFmpegTrackLabelTests.cpp  MediaEventTests.cpp
tests/unit/misc/: CliTests.cpp  ExtensionFilterTests.cpp  KeyNamesTests.cpp  ThemeUtilTests.cpp  UrlUtilsTests.cpp
(+351 files in other folders)
